@@ -1,0 +1,20 @@
+﻿
+Microsoft Visual Studio Solution File, Format Version 9.00
+# Visual Studio 2005
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "test", "test.vcproj", "{9682BD28-DA8C-4E37-810B-FC66EF53AE17}"
+EndProject
+Global
+	GlobalSection(SolutionConfigurationPlatforms) = preSolution
+		Debug|Win32 = Debug|Win32
+		Release|Win32 = Release|Win32
+	EndGlobalSection
+	GlobalSection(ProjectConfigurationPlatforms) = postSolution
+		{9682BD28-DA8C-4E37-810B-FC66EF53AE17}.Debug|Win32.ActiveCfg = Debug|Win32
+		{9682BD28-DA8C-4E37-810B-FC66EF53AE17}.Debug|Win32.Build.0 = Debug|Win32
+		{9682BD28-DA8C-4E37-810B-FC66EF53AE17}.Release|Win32.ActiveCfg = Release|Win32
+		{9682BD28-DA8C-4E37-810B-FC66EF53AE17}.Release|Win32.Build.0 = Release|Win32
+	EndGlobalSection
+	GlobalSection(SolutionProperties) = preSolution
+		HideSolutionNode = FALSE
+	EndGlobalSection
+EndGlobal
