@@ -1,0 +1,323 @@
+<?xml version="1.0" encoding="Windows-1252"?>
+<VisualStudioProject
+	ProjectType="Visual C++"
+	Version="8,00"
+	Name="test"
+	ProjectGUID="{9682BD28-DA8C-4E37-810B-FC66EF53AE17}"
+	RootNamespace="test"
+	Keyword="Win32Proj"
+	>
+	<Platforms>
+		<Platform
+			Name="Win32"
+		/>
+	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
+	<Configurations>
+		<Configuration
+			Name="Debug|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="1"
+			CharacterSet="1"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				Optimization="0"
+				AdditionalIncludeDirectories="..\..\include"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
+				MinimalRebuild="true"
+				BasicRuntimeChecks="3"
+				RuntimeLibrary="3"
+				UsePrecompiledHeader="0"
+				WarningLevel="3"
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="4"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="..\uriparser.lib"
+				LinkIncremental="2"
+				GenerateDebugInformation="true"
+				SubSystem="1"
+				TargetMachine="1"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
+		</Configuration>
+		<Configuration
+			Name="Release|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="1"
+			CharacterSet="1"
+			WholeProgramOptimization="1"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				AdditionalIncludeDirectories="..\..\include"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
+				RuntimeLibrary="2"
+				UsePrecompiledHeader="0"
+				WarningLevel="3"
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="3"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="..\uriparser.lib"
+				LinkIncremental="1"
+				GenerateDebugInformation="true"
+				SubSystem="1"
+				OptimizeReferences="2"
+				EnableCOMDATFolding="2"
+				TargetMachine="1"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
+		</Configuration>
+	</Configurations>
+	<References>
+	</References>
+	<Files>
+		<Filter
+			Name="include"
+			>
+			<File
+				RelativePath="..\..\include\uriparser.h"
+				>
+			</File>
+			<Filter
+				Name="uriparser"
+				>
+				<File
+					RelativePath="..\..\include\uriparser\Uri.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\include\uriparser\UriBase.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\include\uriparser\UriDefsAnsi.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\include\uriparser\UriDefsConfig.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\include\uriparser\UriDefsUnicode.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\include\uriparser\UriIp4.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\include\uriparser\UriIp4Base.h"
+					>
+				</File>
+			</Filter>
+		</Filter>
+		<Filter
+			Name="test"
+			>
+			<File
+				RelativePath="..\..\test\test.cpp"
+				>
+			</File>
+			<Filter
+				Name="CppTest"
+				>
+				<File
+					RelativePath="..\..\test\CppTest\collectoroutput.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\test\CppTest\compileroutput.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\test\CppTest\config.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\test\CppTest\cpptest-assert.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\test\CppTest\cpptest-collectoroutput.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\test\CppTest\cpptest-compileroutput.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\test\CppTest\cpptest-htmloutput.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\test\CppTest\cpptest-output.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\test\CppTest\cpptest-source.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\test\CppTest\cpptest-suite.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\test\CppTest\cpptest-textoutput.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\test\CppTest\cpptest-time.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\test\CppTest\cpptest.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\test\CppTest\htmloutput.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\test\CppTest\missing.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\test\CppTest\missing.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\test\CppTest\source.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\test\CppTest\suite.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\test\CppTest\textoutput.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\test\CppTest\time.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\test\CppTest\utils.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\test\CppTest\utils.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\test\CppTest\winconfig.h"
+					>
+				</File>
+			</Filter>
+		</Filter>
+	</Files>
+	<Globals>
+	</Globals>
+</VisualStudioProject>
