@@ -1,0 +1,20 @@
+﻿
+Microsoft Visual Studio Solution File, Format Version 9.00
+# Visual Studio 2005
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "uriparser", "uriparser.vcproj", "{8E2F76A2-59B5-4DF7-8062-EBD6FCF0C8B3}"
+EndProject
+Global
+	GlobalSection(SolutionConfigurationPlatforms) = preSolution
+		Debug|Win32 = Debug|Win32
+		Release|Win32 = Release|Win32
+	EndGlobalSection
+	GlobalSection(ProjectConfigurationPlatforms) = postSolution
+		{8E2F76A2-59B5-4DF7-8062-EBD6FCF0C8B3}.Debug|Win32.ActiveCfg = Debug|Win32
+		{8E2F76A2-59B5-4DF7-8062-EBD6FCF0C8B3}.Debug|Win32.Build.0 = Debug|Win32
+		{8E2F76A2-59B5-4DF7-8062-EBD6FCF0C8B3}.Release|Win32.ActiveCfg = Release|Win32
+		{8E2F76A2-59B5-4DF7-8062-EBD6FCF0C8B3}.Release|Win32.Build.0 = Release|Win32
+	EndGlobalSection
+	GlobalSection(SolutionProperties) = preSolution
+		HideSolutionNode = FALSE
+	EndGlobalSection
+EndGlobal
